--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,11 @@
-name: Build and Publish Release
+name: Build and Upload Release Assets
 
 on:
   release:
     types: [published]
+
+permissions:
+  contents: write
 
 jobs:
   build:
@@ -11,7 +14,24 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        include:
+          - os: ubuntu-latest
+            make_script: npm run make:linux
+            release_glob: |
+              out/make/**/*.deb
+              out/make/**/*.rpm
+          - os: macos-latest
+            make_script: npm run make:mac
+            release_glob: |
+              out/make/**/*.dmg
+              out/make/**/*.zip
+          - os: windows-latest
+            make_script: npm run make:windows
+            release_glob: |
+              out/make/**/*.exe
+              out/make/**/*.nupkg
+              out/make/**/*-delta.nupkg
+              out/make/**/RELEASES
 
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -26,14 +46,25 @@ jobs:
           node-version: 16
           cache: 'npm'
 
-      - name: Install Linux build dependencies
+      - name: Install Linux packaging dependencies
         if: matrix.os == 'ubuntu-latest'
         run: |
           sudo apt-get update
-          sudo apt-get install --no-install-recommends -y fakeroot rpm libarchive-tools
+          sudo apt-get install --no-install-recommends -y fakeroot dpkg dpkg-dev rpm libarchive-tools
+
+      - name: Install appdmg
+        if: matrix.os == 'macos-latest'
+        run: sudo npm install --global appdmg
 
       - name: Install dependencies
         run: npm ci
 
-      - name: Publish artifacts
-        run: npx electron-forge publish --ci
+      - name: Build distributables
+        run: ${{ matrix.make_script }}
+
+      - name: Upload release assets
+        uses: softprops/action-gh-release@v1
+        with:
+          files: ${{ matrix.release_glob }}
+          fail_on_unmatched_files: true
+
