--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "electron-forge start",
     "package": "electron-forge package",
     "make": "electron-forge make",
+    "make:linux": "electron-forge make --targets @electron-forge/maker-deb --targets @electron-forge/maker-rpm",
+    "make:mac": "electron-forge make --targets @electron-forge/maker-dmg --targets @electron-forge/maker-zip",
+    "make:windows": "electron-forge make --targets @electron-forge/maker-squirrel",
     "publish": "electron-forge publish",
     "publish-windows": "electron-forge publish",
     "publish-mac": "electron-forge publish --arch=x64",
